adding steps attribute and algorithmSoftKPIs
