# app/src/api/models/index.ts
@@ -7,7 +7,6 @@ export * from './AlgorithmValuesSoftKPIsIntegrationEffort';
 export * from './Dataset';
 export * from './DatasetAllOf';
 export * from './DatasetValues';
-export * from './DiagramCoordinates';
 export * from './DiagramExperimentItem';
 export * from './EffortParts';
 export * from './Experiment';
@@ -26,4 +25,5 @@ export * from './SimilarityThresholdFunctionAllOf';
 export * from './SimilarityThresholdFunctionOperator';
 export * from './SimilarityThresholdFunctionUnaryOperator';
 export * from './SimilarityThresholdFunctionValues';
+export * from './SoftKPIsAlgorithmEnum';
 export * from './SoftKPIsExperimentEnum';
