# wrapper/src/api/server/types/SoftKPIsAlgorithmEnum.ts
@@ -1,0 +1,35 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Snowman API
+ * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research. With snowman, developers and researchers will be able to compare the performance of different data matching solutions or improve new algorithms. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: snowman@groups.sap.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * 
+ * @export
+ * @enum {string}
+ */
+export enum SoftKPIsAlgorithmEnum {
+    DomainExpertise = 'domainExpertise',
+    DomainHrAmount = 'domainHrAmount',
+    DomainManhattanDistanceBasedEffort = 'domainManhattanDistanceBasedEffort',
+    DomainHrAmountWeightedEffort = 'domainHrAmountWeightedEffort',
+    DomainMultiplyEffort = 'domainMultiplyEffort',
+    DomainExpertiseWeightedEffort = 'domainExpertiseWeightedEffort',
+    MatchingSolutionExpertise = 'matchingSolutionExpertise',
+    MatchingSolutionHrAmount = 'matchingSolutionHrAmount',
+    MatchingSolutionManhattanDistanceBasedEffort = 'matchingSolutionManhattanDistanceBasedEffort',
+    MatchingSolutionHrAmountWeightedEffort = 'matchingSolutionHrAmountWeightedEffort',
+    MatchingSolutionMultiplyEffort = 'matchingSolutionMultiplyEffort',
+    MatchingSolutionExpertiseWeightedEffort = 'matchingSolutionExpertiseWeightedEffort',
+    GeneralCosts = 'generalCosts',
+    IntegrationTime = 'integrationTime'
+}
